Fix banner gap +image centering

--- a/styling.css
+++ b/styling.css
@@ -3,9 +3,7 @@ body {
   font-family: 'Franklin Gothic medium', 'Arial Narrow', Arial, sans-serif;
   color: #fefefe;
   width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-
+  margin:auto;
 }
 
 p, h2, h3{
@@ -17,6 +15,7 @@ p, h2, h3{
 }
 
 .container {
+  display: flex;
   position: relative;
   text-align: center; 
 }
@@ -109,7 +108,8 @@ ul{
   color: aliceblue;
   line-height: 1.5em;
   font-size: 1em;
-  width: 100%;
+  flex-basis: 100%;
+  padding: 5px;
 }
 
 .flex-main2 {
@@ -121,7 +121,8 @@ ul{
   color: aliceblue;
   line-height: 1.5em;
   font-size: 1em;
-  width: 100%;
+  flex-basis: 100%;
+  padding: 5px;
 }
 
  footer {
